--- a/input/experience.tex
+++ b/input/experience.tex
@@ -1,126 +1,78 @@
 % --- Professional experience
 
-\section{Professional experience}
-  \cventry
-    [.125em]
-    {Jun 2023 - Dec 2023} % Date(s)
-    {Backend Engineer} % Job title
-    {Select Star} % Organization
-    {Remote} % Location
-    {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {SCIM compliant User\'s API implementation}
-        \item {N+1 queries optimization reducing API response times}
-      \end{itemize}
-    }
-  \cventry
-    [.125em]
-    {Dec 2020 - Jan 2023} % Date(s)
-    {Senior Backend Engineer} % Job title
-    {ShipHero} % Organization
-    {Remote} % Location
-    {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Improved shipping stats app analytics query response times by 90\% through utilization of Redshift.}
-        \item {Developed a robust REST API for a workforce management app making managers save 50\% time in leading people tasks (FastAPI, AsyncIO).}
-      \end{itemize}
-    }
-  \cventry
-    [.125em]
-    {Jan 2019 - Nov 2020} % Date(s)
-    {Backend Engineer} % Job title
-    {Mozio Group} % Organization
-    {Remote} % Location
-    {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Integrated the core API with third-party providers (Django, rest-framework, Postgres, Redis, and AWS).}
-        \item {Optimized API response times through implementation of Celery and Redis.}
-        \item {Designed and implemented a high-performance REST API for a car drivers app using MQTT and Redis.}
-      \end{itemize}
-    }
-  \cventry
-    [.125em]
-    {Jul 2016 - Jan 2019} % Date(s)
-    {Backend \& Machine Learning Developer} % Job title
-    {Machinalis SRL} % Organization
-    {Cordoba, Argentina} % Location
-    {}
-    {
-      \begin{itemize} % Description(s) of tasks/responsibilities
-        \item {Microservice for payment status prediction (Flask, XGBoost, Scikit-Learn).}
-        \item {Developed a high-availability REST API for a big data analysis app using Django and Elasticsearch.}
-        \item {Analyzed and trained models for sentiment analysis and people topic detection using Clustering, Pandas, and Scikit-Learn.}
-      \end{itemize}
-    }
+\section*{\faIcon{building} Professional experience}
 
-\subsection{Other relevant experience}
-  \cventry
-    [.125em]
-    {Nov 2022 - Feb 2023} % Date(s)
-    {Senior Backend Engineer (Freelance)} % Job title
-    {AbstractAPI} % Organization
-    {Remote} % Location
-    {}
-    {
-      \begin{itemize}
-        \item {Enhanced development times set-up and experience by applying Docker.}
-        \item {Boosted missing API data from 85 to 98\% by integrating a third-party provider (Python, Django).}
-      \end{itemize}
-    }
-  \cventry
-    [.125em]
-    {Jun 2020 - Sep 2020} % Date(s)
-    {Backend Developer} % Job title
-    {BoostUp.ai} % Organization
-    {Remote} % Location
-    {}
-    {Developed analytics queries for their main pipelines in MongoDB. Technologies: Python, Flask.}
+\subsection{Select Star}\textit{Backend Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill Jun 2023 - Dec 2023}}
+{
+  \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+    \item {SCIM compliant Users API implementation}
+    \item {N+1 queries optimization reducing API response times}
+  \end{itemize}
+}
 
-  \cventry
-    [.125em]
-    {Sep 2015 - Jul 2016} % Date(s)
-    {Software Engineer} % Job title
-    {Taller Technologies} % Organization
-    {Cordoba, Argentina} % Location
-    {}
-    {}
+\subsection{AbstractAPI}\textit{Senior Backend Engineer (Freelance)}{\textcolor{subsectioncolor}{\textbf{\hfill Nov 2022 - Feb 2023}}
+{
+  \begin{itemize}[itemsep=-3pt]
+    \item {Enhanced development times set-up and experience by applying Docker.}
+    \item {Boosted missing API data from 85 to 98\% by integrating a third-party provider (Python, Django).}
+  \end{itemize}
+}
 
-  \cventry
-    [.125em]
-    {Dec 2014 - Aug 2015} % Date(s)
-    {Unit Engineer} % Job title
-    {VENG S.A. (CONAE)} % Organization
-    {Cordoba, Argentina} % Location
-    {}
-    {}
+\subsection{ShipHero}\textit{Senior Backend Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill Dec 2020 - Jan 2023}}
+{
+  \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+    \item {Improved shipping stats app analytics query response times by 90\% through utilization of Redshift.}
+    \item {Developed a robust REST API for a workforce management app making managers save 50\% time in leading people tasks (FastAPI, AsyncIO).}
+  \end{itemize}
+}
 
-  \cventry
-    [.125em]
-    {Aug 2014 - Dec 2014} % Date(s)
-    {Embedded Software Engineer (Freelance)} % Job title
-    {SIANA Systems} % Organization
-    {Remote} % Location
-    {}
-    {}
+\subsection{Mozio Group}\textit{Backend Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill Jan 2019 - Nov 2020}}
+{
+  \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+    \item {Integrated the core API with third-party providers (Django, rest-framework, Postgres, Redis, and AWS).}
+    \item {Optimized API response times through implementation of Celery and Redis.}
+    \item {Designed and implemented a high-performance REST API for a car drivers app using MQTT and Redis.}
+  \end{itemize}
+}
 
-  \cventry
-    [.125em]
-    {Sep 2011 - Sep 2014} % Date(s)
-    {Software Engineer} % Job title
-    {DTA S.A.} % Organization
-    {Cordoba, Argentina} % Location
-    {}
-    {Main developer of the Control Unit Software for the SAOCOM satellite (CONAE).}
-  \cventry
-    [.125em]
-    {Sep 2007 - Aug 2011} % Date(s)
-    {IT support \& Sysadmin} % Job title
-    {Compute Centre of the Exacts, Physic and Natural Sciences School} % Organization
-    {Cordoba, Argentina} % Location
-    {}
-    {}
+\subsection{Machinalis SRL}\textit{Backend \& Machine Learning Developer}{\textcolor{subsectioncolor}{\textbf{\hfill Jul 2016 - Jan 2019}}
+{
+  \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+    \item {Microservice for payment status prediction (Flask, XGBoost, Scikit-Learn).}
+    \item {Developed a high-availability REST API for a big data analysis app using Django and Elasticsearch.}
+    \item {Analyzed and trained models for sentiment analysis and people topic detection using Clustering, Pandas, and Scikit-Learn.}
+  \end{itemize}
+}
+
+%\subsection{BoostUp.ai \hfill Jun 2020 - Sep 2020} % Date(s)
+%\textit{Backend Developer} % Job title
+%{Developed analytics queries for their main pipelines in MongoDB. Technologies: Python, Flask.}
+
+\subsection{\small Taller Technologies}\textit{\small Software Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2015 - Jul 2016}}
+% {
+%   \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+%     \item {Skills: C, C++, Python}
+%   \end{itemize}
+% }
+
+\subsection{\small VENG S.A. (CONAE)}\textit{\small Unit Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill \small Dec 2014 - Aug 2015}}
+
+\subsection{\small SIANA Systems}\textit{\small Embedded Software Engineer (Freelance)}{\textcolor{subsectioncolor}{\textbf{\hfill \small Aug 2014 - Dec 2014}}
+% {
+%   \begin{itemize}[itemsep=-3pt] % Description(s) of tasks/responsibilities
+%     \item {Skills: C, Board bring up, Embedded board debugging}
+%   \end{itemize}
+% }
+
+% \subsection{DTA S.A. - \textit{Software Engineer} \hfill Sep 2011 - Sep 2014}
+\subsection{\small DTA S.A.}\textit{\small Software Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2011 - Sep 2014}}
+{
+  \begin{itemize}
+    \item {Main developer of the Control Unit Software for the SAOCOM satellite (CONAE).}
+  \end{itemize}
+}
+
+% \subsection{Compute Centre of the Exacts, Physic and Natural Sciences School - \textit{IT support \& Sysadmin} \hfill Sep 2007 - Aug 2011} % Date(s)
+\subsection{\small Compute Centre of the Exacts, Physics and Natural Sciences School}\textit{\small IT support \& Sysadmin}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2007 - Aug 2011}}
 
 % --- End of professional experience
