--- a/input/personal_data.tex
+++ b/input/personal_data.tex
@@ -1,19 +1,18 @@
 % ---------- Personal data
 
-\name{Gonzalo}{Sanchez}
-% \quote{Software Engineer, self-starter data-driven with special care in end-user point of view.}
-% \address {367 Dr. Benito Soria st.}{Cordoba, Cordoba, X5004FOA Argentina}
-\phone[mobile]{+54~(351)~5143297}
+\begin{center}
+    \color{sectioncolor}\textbf{\huge Gonzalo Sanchez} \\
+    \vspace{3mm}
+    \color{subsectioncolor}\faIcon{briefcase} Software Engineer
+\end{center}
 
-% \renewcommand{\sfdefault}{roman}
+\vspace{2mm}
+\begin{center}
+    \faIcon{phone} \href{https://wa.me/5493515143297}{(+549) 351-5143297} \hspace{0.5in}
+    \faIcon{envelope} \href{mailto:gonzalosanchezmarques@gmail.com}{gonzalosanchezmarques@gmail.com} \hspace{0.5in}
+    \faIcon{linkedin} \href{https://www.linkedin.com/in/sanchezgonzalo/}{sanchezgonzalo}
+\end{center}
 
-\email{gonzalosanchezmarques@gmail.com}
-
-% usage: \social[<optional type>][<optional url>]{<account name>}
-% where <optional type> should be either "linkedin", "xing", "twitter", "github", "gitlab" or "skype"
-\social[linkedin]{sanchezgonzalo}
-\social[github]{sanchezg}
-
-% \photo[64pt][0.4pt]{IMG_2994.jpg}
+\vspace{3mm}
 
 % ---------- End of personal data
