--- a/input/skills.tex
+++ b/input/skills.tex
@@ -1,17 +1,14 @@
 % ------------ Skills
 
-\section{Skills}
-
-  \cvitem
-    {Programming}
-    {Python, C, Django, Flask, rest-framework, FastAPI.}
-
-  \cvitem
-    {Others}
-    {Postgres, MySQL, Redis, ElasticSearch, AWS, Docker.}
-
-  \cvitem
-    {Languages}
-    {Spanish, English}
+\section*{\faIcon{cogs} Technical Skills}
+\subsection*{Programming}
+\begin{center}
+  \begin{itemize}[label=\faIcon{check}, itemsep=-3pt]
+      \item Python, C
+      \item Django, Flask, rest-framework, FastAPI
+      \item Postgres, MySQL, Redis, ElasticSearch
+      \item AWS, Docker
+  \end{itemize}
+\end{center}
 
 % ------- End of skills
