--- a/input/education.tex
+++ b/input/education.tex
@@ -1,23 +1,11 @@
 % ---------- Education
 
-\section{Education}
+\section*{\faIcon{graduation-cap} Education}
 
-  \cventry
-    {2004 - 2013}
-    {Bachelor of Computer Engineering}
-    {Cordoba National University}
-    {Cordoba, Argentina}
-    {}
-    {}
+\subsection{Cordoba National University}\textit{Bachelor Degree: Computer Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill Dec 2004 - 2012}}\\
+Thesis: "Design and Implementation of an Embedded Developments Board for Education Purposes"
 
-\subsection{Teaching}
-
-  \cvitem
-    {2014} % Date(s)
-    {Kinetis K60 architecture and MQX(r) RTOS programming Workshop at Cordoba National University}
-
-  \cvitem
-    {2010 - 2013}
-    {Student Assistant at Data Communications Course, Cordoba National University}
+\subsection*{\small Kinetis K60 architecture and MQX(r) RTOS programming Workshop \hfill 2014}
+\subsection*{\small Teaching Assistant at Data Communications Course \hfill 2010 - 2013}
 
 % ---------- End of education
