--- a/input/experience.tex
+++ b/input/experience.tex
@@ -68,11 +68,11 @@
 \subsection{\small DTA S.A.}\textit{\small Software Engineer}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2011 - Sep 2014}}
 {
   \begin{itemize}
-    \item {Main developer of the Control Unit Software for the SAOCOM satellite (CONAE).}
+    \item {\small Main developer of the Control Unit Software for the SAOCOM satellite (CONAE).}
   \end{itemize}
 }
 
 % \subsection{Compute Centre of the Exacts, Physic and Natural Sciences School - \textit{IT support \& Sysadmin} \hfill Sep 2007 - Aug 2011} % Date(s)
-\subsection{\small Compute Centre of the Exacts, Physics and Natural Sciences School}\textit{\small IT support \& Sysadmin}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2007 - Aug 2011}}
+\subsection{\small Exacts, Physics and Natural Sciences School}\textit{\small IT support \& Sysadmin}{\textcolor{subsectioncolor}{\textbf{\hfill \small Sep 2007 - Aug 2011}}
 
 % --- End of professional experience
