--- a/input/personal_data.tex
+++ b/input/personal_data.tex
@@ -3,7 +3,7 @@
 \begin{center}
     \color{sectioncolor}\textbf{\huge Gonzalo Sanchez} \\
     \vspace{3mm}
-    \color{subsectioncolor}\faIcon{briefcase} Software Engineer
+    \color{black}\faIcon{briefcase} Software Engineer
 \end{center}
 
 \vspace{2mm}
