--- a/input/skills.tex
+++ b/input/skills.tex
@@ -1,11 +1,9 @@
 % ------------ Skills
 
 \section*{\faIcon{cogs} Technical Skills}
-\subsection*{Programming}
 \begin{center}
   \begin{itemize}[label=\faIcon{check}, itemsep=-3pt]
-      \item Python, C
-      \item Django, Flask, rest-framework, FastAPI
+      \item Python, C, Django, Flask, rest-framework, FastAPI
       \item Postgres, MySQL, Redis, ElasticSearch
       \item AWS, Docker
   \end{itemize}
